Make code Java8 compatible